tests/ui/autodiff/autodiff_illegal.stderr
error[E0658]: attributes on expressions are experimental
  --> $DIR/autodiff_illegal.rs:53:5
   |
LL |     #[autodiff_forward(df7, Dual)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: Duplicated can not be used for this type
  --> $DIR/autodiff_illegal.rs:14:14
   |
LL | pub fn f1(x: f64) {
   |              ^^^

error: expected 1 activities, but found 2
  --> $DIR/autodiff_illegal.rs:20:1
   |
LL | #[autodiff_reverse(df3, Duplicated, Const)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: expected 1 activities, but found 0
  --> $DIR/autodiff_illegal.rs:27:1
   |
LL | #[autodiff_reverse(df4)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^

error: Dual can not be used in Reverse Mode
  --> $DIR/autodiff_illegal.rs:34:1
   |
LL | #[autodiff_reverse(df5, Dual)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Duplicated can not be used in Forward Mode
  --> $DIR/autodiff_illegal.rs:41:1
   |
LL | #[autodiff_forward(df6, Duplicated)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Duplicated can not be used for this type
  --> $DIR/autodiff_illegal.rs:42:14
   |
LL | pub fn f6(x: f64) {
   |              ^^^

error: autodiff must be applied to function
  --> $DIR/autodiff_illegal.rs:50:5
   |
LL |     let mut x = 5;
   |     ^^^^^^^^^^^^^^

error: autodiff must be applied to function
  --> $DIR/autodiff_illegal.rs:54:5
   |
LL |     x = x + 3;
   |     ^

error: autodiff must be applied to function
  --> $DIR/autodiff_illegal.rs:59:5
   |
LL |     let add_one_v2 = |x: u32| -> u32 { x + 1 };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: autodiff requires at least a name and mode
  --> $DIR/autodiff_illegal.rs:65:1
   |
LL | / pub fn f7(x: f64) {
LL | |
LL | |     unimplemented!()
LL | | }
   | |_^

error: autodiff requires at least a name and mode
  --> $DIR/autodiff_illegal.rs:72:1
   |
LL | / pub fn f8(x: f64) {
LL | |
LL | |     unimplemented!()
LL | | }
   | |_^

error: autodiff requires at least a name and mode
  --> $DIR/autodiff_illegal.rs:79:1
   |
LL | / pub fn f9(x: f64) {
LL | |
LL | |     unimplemented!()
LL | | }
   | |_^

error[E0428]: the name `fn_exists` is defined multiple times
  --> $DIR/autodiff_illegal.rs:87:1
   |
LL | fn fn_exists() {}
   | -------------- previous definition of the value `fn_exists` here
...
LL | #[autodiff_reverse(fn_exists, Active)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `fn_exists` redefined here
   |
   = note: `fn_exists` must be defined only once in the value namespace of this module

error: did not recognize Activity: `Reverse`
  --> $DIR/autodiff_illegal.rs:95:26
   |
LL | #[autodiff_reverse(df13, Reverse)]
   |                          ^^^^^^^

error: invalid return activity Active in Forward Mode
  --> $DIR/autodiff_illegal.rs:147:1
   |
LL | #[autodiff_forward(df19, Dual, Active)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: invalid return activity Dual in Reverse Mode
  --> $DIR/autodiff_illegal.rs:153:1
   |
LL | #[autodiff_reverse(df20, Active, Dual)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: invalid return activity Duplicated in Reverse Mode
  --> $DIR/autodiff_illegal.rs:160:1
   |
LL | #[autodiff_reverse(df21, Active, Duplicated)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared type `MyFloat`
  --> $DIR/autodiff_illegal.rs:116:1
   |
LL | #[autodiff_reverse(df15, Active, Active)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ use of undeclared type `MyFloat`

error[E0433]: failed to resolve: use of undeclared type `F64Trans`
  --> $DIR/autodiff_illegal.rs:140:1
   |
LL | #[autodiff_reverse(df18, Active, Active)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ use of undeclared type `F64Trans`

error[E0599]: the function or associated item `default` exists for tuple `(DoesNotImplDefault, DoesNotImplDefault)`, but its trait bounds were not satisfied
  --> $DIR/autodiff_illegal.rs:167:1
   |
LL | struct DoesNotImplDefault;
   | ------------------------- doesn't satisfy `DoesNotImplDefault: Default`
LL | #[autodiff_forward(df22, Dual)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function or associated item cannot be called on `(DoesNotImplDefault, DoesNotImplDefault)` due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `DoesNotImplDefault: Default`
           which is required by `(DoesNotImplDefault, DoesNotImplDefault): Default`
help: consider annotating `DoesNotImplDefault` with `#[derive(Default)]`
   |
LL + #[derive(Default)]
LL | struct DoesNotImplDefault;
   |

error: aborting due to 21 previous errors

Some errors have detailed explanations: E0428, E0433, E0599, E0658.
For more information about an error, try `rustc --explain E0428`.
